final, fixed email section spacing

--- a/main.css
+++ b/main.css
@@ -380,6 +380,12 @@ section.form {
 	justify-content: start;
 	z-index: 1;
 	padding: 0rem 2rem 0rem 2rem;
+	
+}
+.form-container{
+	display: flex;
+	flex-direction:column;
+	justify-content:center;
 }
 
 .form input {
